--- a/gbemu/gbemu.vcxproj
+++ b/gbemu/gbemu.vcxproj
@@ -142,10 +142,13 @@
     <ClCompile Include="gbcpu.cpp" />
     <ClCompile Include="gbemu.cpp" />
     <ClCompile Include="gbInit.cpp" />
+    <ClCompile Include="gbIO.cpp" />
+    <ClCompile Include="MBC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gb.h" />
     <ClInclude Include="gbcpu.h" />
+    <ClInclude Include="MBC.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
