--- a/gbemu/gbemu.vcxproj.filters
+++ b/gbemu/gbemu.vcxproj.filters
@@ -13,36 +13,96 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\MBC">
+    <Filter Include="Source Files\CPU">
+      <UniqueIdentifier>{f1a868ca-b215-4bb7-95ad-dd2ce9ab208a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ROM">
       <UniqueIdentifier>{00e278e8-5708-4839-9257-1bcec3f8c89e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\IOSpace">
+      <UniqueIdentifier>{d290e2c2-6119-43c0-b001-fa38498c9ff6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\IOSpace">
+      <UniqueIdentifier>{090d337d-e6b6-4910-b5ed-838ffa8eae1c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gbemu.cpp">
+    <ClCompile Include="emu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gbcpu.cpp">
+      <Filter>Source Files\CPU</Filter>
+    </ClCompile>
+    <ClCompile Include="gbgpu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="gbInit.cpp">
+    <ClCompile Include="rom.cpp">
+      <Filter>Source Files\ROM</Filter>
+    </ClCompile>
+    <ClCompile Include="mbc1.cpp">
+      <Filter>Source Files\ROM</Filter>
+    </ClCompile>
+    <ClCompile Include="mbc3.cpp">
+      <Filter>Source Files\ROM</Filter>
+    </ClCompile>
+    <ClCompile Include="gbinput.cpp">
+      <Filter>Source Files\IOSpace</Filter>
+    </ClCompile>
+    <ClCompile Include="gbserial.cpp">
+      <Filter>Source Files\IOSpace</Filter>
+    </ClCompile>
+    <ClCompile Include="gbtimer.cpp">
+      <Filter>Source Files\IOSpace</Filter>
+    </ClCompile>
+    <ClCompile Include="SDLWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="gbIO.cpp">
+    <ClCompile Include="gbram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MBC.cpp">
-      <Filter>Source Files\MBC</Filter>
+    <ClCompile Include="gbsound.cpp">
+      <Filter>Source Files\IOSpace</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="gbcpu.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="gb.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MBC.h">
-      <Filter>Source Files\MBC</Filter>
+    <ClInclude Include="gbcpu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="prefixOpcodes.hpp">
+      <Filter>Source Files\CPU</Filter>
+    </ClInclude>
+    <ClInclude Include="gbrom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gbgpu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gbspace.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SDLWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gbram.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gbserial.h">
+      <Filter>Header Files\IOSpace</Filter>
+    </ClInclude>
+    <ClInclude Include="gbtimer.h">
+      <Filter>Header Files\IOSpace</Filter>
+    </ClInclude>
+    <ClInclude Include="gbinput.h">
+      <Filter>Header Files\IOSpace</Filter>
+    </ClInclude>
+    <ClInclude Include="gbsound.h">
+      <Filter>Header Files\IOSpace</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
